[workspace]
resolver = "2"
members  = [
    # ── Core layers (dependency order) ───────────────────────────────────────
    "crates/crypto",
    "crates/primitives",
    "crates/transaction",
    "crates/block",
    "crates/state",
    "crates/consensus",
    "crates/execution",
    "crates/storage",
    "crates/networking",
    "crates/rpc",
    "crates/wallet",
    "crates/genesis",
    "crates/config",
    "crates/event_bus",
    "crates/metrics",
    "crates/security",
    "crates/upgrade",

    # ── Node binary ───────────────────────────────────────────────────────────
    "crates/node",

    # ── Tools ─────────────────────────────────────────────────────────────────
    "tools/miner",
    "tools/faucet",
    "tools/explorer",
    "tools/cli",
]

# ── Shared dependency versions (one place to update) ─────────────────────────
[workspace.dependencies]
serde       = { version = "1.0.203", features = ["derive"] }
serde_json  = "1.0.120"
thiserror   = "1.0.61"
hex         = "0.4.3"
bincode     = "1.3.3"
toml        = "0.8.12"
rand        = { version = "0.8.5", features = ["getrandom"] }
zeroize     = { version = "1.7.0", features = ["derive"] }
sha2        = "0.10.8"
sha3        = "0.10.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "zeroize"] }

# ── Workspace-level profile settings ─────────────────────────────────────────
[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"       # smaller binary, no unwinding overhead

[profile.dev]
opt-level   = 0
debug       = true

# Faster builds in dev for heavy crates.
[profile.dev.package.ed25519-dalek]
opt-level = 2

[profile.dev.package.sha2]
opt-level = 2

[profile.dev.package.sha3]
opt-level = 2
