[package]
name        = "crypto"
version     = "0.1.0"
edition     = "2021"
description = "Production-grade cryptography layer for a Layer 1 blockchain"
license     = "MIT"

[features]
default = []
# Gate test helpers behind an explicit feature — never compiled into production
# builds unless the caller explicitly opts in.
test-utils = []

[dependencies]
# Ed25519 signing — Trail-of-Bits audited (2022), constant-time, deterministic
ed25519-dalek   = { version = "2.1.1", features = ["rand_core", "zeroize"] }

# SHA-2 family (SHA-256) — FIPS-140 approved, RustCrypto ecosystem
sha2            = "0.10.8"

# Keccak-256 — EVM-compatible hashing option, same RustCrypto ecosystem
sha3            = "0.10.8"

# OS-backed CSPRNG — pulls entropy from the OS, never userspace RNG
rand            = { version = "0.8.5", features = ["getrandom"] }

# Zeroize key material on drop — prevents secrets surviving in heap/stack
zeroize         = { version = "1.7.0", features = ["derive"] }

# Hex encoding/decoding — no-panic, allocation-free paths available
hex             = "0.4.3"

# Ergonomic error types — zero runtime cost, no panics
thiserror       = "1.0.61"

# Serialization — required for network transmission of public types
serde           = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
# Only used in examples/ and tests — not compiled into the library itself
serde_json      = "1.0.120"
