[package]
name        = "event_bus"
version     = "0.1.0"
edition     = "2021"
description = "In-process event bus — decoupled communication between node subsystems"
license     = "MIT"

[dependencies]
crypto      = { path = "../crypto" }
primitives  = { path = "../primitives" }

serde       = { version = "1.0.203", features = ["derive"] }
thiserror   = "1.0.61"
