[package]
name        = "genesis"
version     = "0.1.0"
edition     = "2021"
description = "Genesis block and state construction — chain bootstrap from configuration"
license     = "MIT"

[features]
default    = []
test-utils = []

[dependencies]
crypto      = { path = "../crypto" }
primitives  = { path = "../primitives" }
block       = { path = "../block" }
state       = { path = "../state" }

serde       = { version = "1.0.203", features = ["derive"] }
toml        = "0.8.12"
thiserror   = "1.0.61"
hex         = "0.4.3"

[dev-dependencies]
serde_json  = "1.0.120"
bincode     = "1.3.3"
