[package]
name        = "networking"
version     = "0.1.0"
edition     = "2021"
description = "P2P networking — peer management, gossip, sync, rate limiting, and ban list"
license     = "MIT"

[features]
default    = []
test-utils = []

[dependencies]
crypto      = { path = "../crypto" }
primitives  = { path = "../primitives" }
block       = { path = "../block" }
transaction = { path = "../transaction" }

serde       = { version = "1.0.203", features = ["derive"] }
bincode     = "1.3.3"
thiserror   = "1.0.61"
hex         = "0.4.3"

[dev-dependencies]
serde_json  = "1.0.120"
