[package]
name        = "node"
version     = "0.1.0"
edition     = "2021"
description = "Sypcoin node binary — assembles all layers and runs the blockchain node"
license     = "MIT"

[[bin]]
name = "sypcoin"
path = "src/main.rs"

[dependencies]
# Internal crates — all layers
crypto      = { path = "../crypto" }
primitives  = { path = "../primitives" }
transaction = { path = "../transaction" }
block       = { path = "../block" }
state       = { path = "../state" }
consensus   = { path = "../consensus" }
execution   = { path = "../execution" }
storage     = { path = "../storage" }
networking  = { path = "../networking" }
rpc         = { path = "../rpc" }
wallet      = { path = "../wallet" }
genesis     = { path = "../genesis" }
config      = { path = "../config" }
event_bus   = { path = "../event_bus" }
metrics     = { path = "../metrics" }
security    = { path = "../security" }

serde       = { version = "1.0.203", features = ["derive"] }
thiserror   = "1.0.61"
hex         = { workspace = true }
bincode     = "1.3.3"
serde_json  = { workspace = true }
