[package]
name        = "rpc"
version     = "0.1.0"
edition     = "2021"
description = "JSON-RPC 2.0 server — chain queries, transaction submission, mining info"
license     = "MIT"

[features]
default    = []
test-utils = []

[dependencies]
crypto      = { path = "../crypto" }
primitives  = { path = "../primitives" }
block       = { path = "../block" }
transaction = { path = "../transaction" }
state       = { path = "../state" }
storage     = { path = "../storage" }
consensus   = { path = "../consensus" }

serde       = { version = "1.0.203", features = ["derive"] }
serde_json  = "1.0.120"
thiserror   = "1.0.61"
hex         = "0.4.3"
bincode     = "1.3.3"

[dev-dependencies]
