[package]
name        = "storage"
version     = "0.1.0"
edition     = "2021"
description = "Persistent storage layer — blocks, transactions, state snapshots with RocksDB backend"
license     = "MIT"

[features]
default    = []
# Enable RocksDB backend (requires rocksdb system library).
# Without this flag, the in-memory backend is used (for tests / CI).
rocksdb-backend = ["rocksdb"]
test-utils = []

[dependencies]
crypto      = { path = "../crypto" }
primitives  = { path = "../primitives" }
block       = { path = "../block" }
transaction = { path = "../transaction" }
state       = { path = "../state" }

serde       = { version = "1.0.203", features = ["derive"] }
bincode     = "1.3.3"
thiserror   = "1.0.61"
hex         = "0.4.3"

# RocksDB — only compiled when feature is enabled.
# Requires: apt install librocksdb-dev (Linux) or brew install rocksdb (macOS).
rocksdb     = { version = "0.21.0", optional = true }

[dev-dependencies]
serde_json  = "1.0.120"
