[package]
name        = "transaction"
version     = "0.1.0"
edition     = "2021"
description = "Transaction structure, validation, signing, and mempool for the blockchain"
license     = "MIT"

[features]
default    = []
test-utils = []

[dependencies]
# Internal crates
crypto      = { path = "../crypto" }
primitives  = { path = "../primitives" }

# Serialization
serde       = { version = "1.0.203", features = ["derive"] }
bincode     = "1.3.3"
hex         = "0.4.3"

# Error types
thiserror   = "1.0.61"

[dev-dependencies]
serde_json  = "1.0.120"
